# RISKINSURANCE

./: README.md  car_report_ingest.py
car_ingest/: .env.example  README.md  pyproject.toml
car_ingest/car_ingest/: __init__.py  cli.py  config.py  docx_parser.py  sql_server.py
car_ingest/sql/: create_tables.sql
